Fixed tickets alignment

--- a/src/styles/mainpage/tickets.module.css
+++ b/src/styles/mainpage/tickets.module.css
@@ -6,6 +6,7 @@
   border-radius: 10px;
   background: transparent;
   list-style: none;
+  padding: 0;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   margin: 0 auto 2rem auto;
